2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/gfxterm.c (calculate_normal_character_width): Return 8
	if no ASCII character is found to prevent crash.

2011-03-23  Alexander Kurtz  <kurtz.alex@googlemail.com>

	* grub-core/video/bitmap.c (match_extension): Ignore case.

2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_entry.c (init_line): Fix off-by-one error.

2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/parser.y: Declare "time" as valid argument.

2011-03-23  Peter Jones  <pjones@redhat.com>

	Fix incorrect assert failure reporting.

	* grub-core/tests/example_functional_test.c (example_test): Add
	a failure comment.
	* grub-core/tests/lib/test.c (add_failure): Renamed to ...
	(failure_start): ...this. Check that malloc succeeded.
	Don't call xvasprintf. Return failure struct.
	(failure_append_vtext): New function.
	(failure_append_text): Likewise.
	(add_failure): Likewise.
	(grub_test_assert_helper): Likewise.
	* include/grub/test.h (grub_test_assert_helper): New declaration.
	(grub_test_assert): Macro rewritten.

2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/main.c (GRUB_MOD_INIT): Export pager variable.

2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/i386/pc/biosnum.c: Add missing include.

2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/usbms.c (grub_usbms_reset): Transform USB-style error
	into GRUB-style one.

2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/usbtrans.c (grub_usb_control_msg): Return usb-style
	error and not grub_errno.
	* grub-core/bus/usb/usbhub.c (grub_usb_add_hub): Likewise.

2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/uhci.c (grub_uhci_detect_dev): Return
	GRUB_USB_SPEED_NONE in case of failure and not the error code.

2011-03-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/efiemu/i386/pc/cfgtables.c